@@ -20,6 +20,7 @@ Date: ??.??.??
       - Hid crushed stone. Use stone instead. Ratios will all stay the same
       - Hid liquid fuel. Enriched fuel is now made directly from fuel oil plus residual gas
       - Hid Electrowinning cells. Moved their recipes to Electrolyser 4
+      - Hid Desert / Swamp / Temperate environment kits
     - Changed recipe icon for Slag 1 and Slag 2 #335
   Bugfixes:
     - Fixed tech steam-power missing a locale in some mod configurations #332
